# TrustZone-backed-Bitcoin-Wallet

./: Android.mk  CMakeLists.txt  README.md
host/: Makefile  extern.c  extern.h  main.c  rw_test.c  rw_test.h  stream_comm.c  test_helpers.c  test_performance.c  test_prandom.c  test_stream.c  test_transaction.c  test_wallet.c  tz_functions.c
ta/: Android.mk  Makefile  wallet_ta.c
ta/include/: wallet_ta.h
